# birthdays

./: CMakeLists.txt  README.md  birthdays.py  main.py  pyproject.toml  test  test.json  tests.py
cpp/examples/: CMakeLists.txt  example.cpp
cpp/include/: book.h  book.hh  person.h  person.hh  utils.hh
cpp/src/: CMakeLists.txt  book.cpp  person.cpp
cpp/tests/: CMakeLists.txt  test_book.cpp  test_person.cpp
docs/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
examples/python/: bdays.py
include/: CMakeLists.txt  book.h  person.h
install/include/: book.hh  person.hh
lib/: CMakeLists.txt  book.cpp  person.cpp  person.h
python/: CMakeLists.txt  book_bindings.cpp  person_bindings.cpp  pybirthdays.cpp
python/examples/: bday_tool.py  manage_bdays.py
python/pybind11/: CMakeLists.txt  bind_birthdays.cpp  bind_book.cpp  bind_extras.cpp  bind_person.cpp  birthday_bindings.cpp  book_bindings.cpp  enum_bindings.cpp  person_bindings.cpp
python/tests/: __init__.py  test_book.py  test_person.py
src/: CMakeLists.txt  book.cpp  person.cpp
tests/: CMakeLists.txt  book_test.py  person_test.py  test_book.cpp  test_person.cpp
tests/cpp/: CMakeLists.txt  test_book.cpp  test_person.cpp
tests/python/: __init__.py  test_book.py  test_person.py
